syntax = "proto2";

package fetch.oef.pb;

import "query.proto";

message Fipa {
    message Cfp {
        optional Query.Model query = 1;
        extensions 2 to 100;
    }
    message Propose {
        repeated Query.Instance objects = 1;
        extensions 2 to 100;
    }
    message Accept {
        repeated Query.Instance objects = 1;
        extensions 2 to 100;
    }
    message Close {
    }
    message Message {
        required int32 msg_id = 1;
        required int32 target = 2;
        oneof msg {
            Cfp cfp = 3;
            Propose propose = 4;
            Accept accept = 5;
            Close close = 6;
        }
    }
}

